--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,68 @@
-body {
+body{
+  height: 100vh;
+  width: 100vw;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+}
+.main{
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  background-position: center;
+  background-image: url("wallpaper_pc.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  padding-top: 3%
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container{
+  margin-left: auto;
+  margin-right: auto;
+  width: 60%;
+  background-color: aliceblue;
+  padding: 2%;
+  border-radius: 15px;
 }
+
+input[type="text"] {
+  border-radius: 0;
+  text-transform: capitalize;
+  width: 90%;
+  height: 30px;
+}
+
+.capitalize-first{
+  text-transform: capitalize;
+}
+
+button {
+  width: 50px;
+  background-color: #FFFFFF;
+  height: 30px;
+  background-image: url('trash.png');
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: contain; 
+  border: none;
+  padding: 0;
+  margin: 0;
+  cursor: pointer;
+  border-radius: 5px;
+  display: inline-block;
+}
+
+
+h2 {
+  margin-bottom: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.buttonAdd{
+  height: 40px;
+  width: 60px;
+  cursor: pointer;
+  background-image: none;
+  border:2px solid #000000;
+
+}
+
