--- a/src/index.css
+++ b/src/index.css
@@ -36,14 +36,9 @@ input[type="text"] {
 }
 
 button {
-  width: 50px;
-  background-color: #FFFFFF;
+  width: 80px;
+  background-color: #e9c4c4;
   height: 30px;
-  background-image: url('trash.png');
-  background-repeat: no-repeat;
-  background-position: center center;
-  background-size: contain; 
-  border: none;
   padding: 0;
   margin: 0;
   cursor: pointer;
